--- a/style.css
+++ b/style.css
@@ -1,5 +1,33 @@
 .input-wrapper {
-
-    margin-top: 10px;
+  margin-top: 10px;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
 }
 
+.info-text {
+  background-color: aqua;
+  padding: 8px 10px;
+  font-size: 0.85rem;
+  border-radius: 10px;
+  visibility: hidden;
+  display: inline-block;
+  position: absolute;
+  left: 40px;
+}
+
+.info-wrapper {
+  width: 25px;
+  height: 25px;
+  position: relative;
+  display: inline-block;
+}
+.info-wrapper:hover {
+  cursor: pointer;
+}
+.info-wrapper:hover .info-text {
+  visibility: visible;
+  z-index: 1;
+}/*# sourceMappingURL=style.css.map */
