--- a/style.scss
+++ b/style.scss
@@ -12,7 +12,7 @@
 .info-text {
 
    
-    background-color:aqua;
+    background-color:#00ffff;
     padding: 8px 10px;
     font-size: 0.85rem;
     border-radius: 10px;
@@ -20,7 +20,7 @@
     display: inline-block;
     position: absolute;
     left: 40px;
- 
+    width: 200px;
     
 
 }
