--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-.main, .header {
+.main,
+.header {
   margin-left: 20px;
 }
 
@@ -35,6 +36,10 @@
   height: 25px;
   position: relative;
   display: inline-block;
+}
+.info-wrapper svg {
+  width: 25px;
+  height: 25px;
 }
 .info-wrapper:hover {
   cursor: pointer;
