--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
-.main, .header {
+.main,
+.header {
 
     margin-left: 20px;
 
@@ -20,13 +21,13 @@
         border-radius: 10px;
     }
 
-   
+
 }
 
 .info-text {
 
-   
-    background-color:#02c4c4;
+
+    background-color: #02c4c4;
     color: white;
     padding: 8px 10px;
     font-size: 0.85rem;
@@ -36,7 +37,7 @@
     position: absolute;
     left: 40px;
     width: 200px;
-    
+
 
 }
 
@@ -52,6 +53,11 @@
 
     display: inline-block;
 
+    svg {
+        width: 25px;
+        height: 25px;
+    }
+
 
 
     &:hover {
@@ -65,7 +71,7 @@
         }
     }
 
-    
+
 }
 
 .calculate-click {
@@ -86,7 +92,5 @@
 
         opacity: .8;
     }
-    
+
 }
-
-
