--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 .main,
 .header {
   margin-left: 20px;
+  font-family: "Mulish", sans-serif;
+}
+
+.main .calculator-explained {
+  margin-top: 100px;
 }
 
 .input-wrapper {
@@ -55,7 +60,7 @@
   border: none;
   padding: 10px 15px;
   border-radius: 20px;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: "Mulish", sans-serif;
   color: whitesmoke;
 }
 .calculate-click:hover {
@@ -64,4 +69,9 @@
 }
 .calculate-click:active {
   opacity: 0.8;
+}
+
+.more-info {
+  display: block;
+  margin-top: 10px;
 }/*# sourceMappingURL=style.css.map */
