--- a/style.css
+++ b/style.css
@@ -1,29 +1,100 @@
-.main,
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0px;
+}
+
+.main {
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1450px;
+  width: 100%;
+}
+
 .header {
-  margin-left: 20px;
+  margin-top: 0px;
   font-family: "Mulish", sans-serif;
 }
-
-.main .calculator-explained {
-  margin-top: 100px;
+.header .img-wrapper {
+  background-image: linear-gradient(0deg, rgba(248, 247, 247, 0) 65%, rgba(1, 0, 0, 0.8) 100%), url("happyhouse.jpg");
+  padding-bottom: 150px;
+  background-position: 70%;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.header .img-wrapper h1 {
+  color: white;
+  text-shadow: 2px 2px black;
+  margin-left: 20px;
+  margin-bottom: 7px;
+}
+.header .img-wrapper p {
+  margin-top: 0px;
+  color: white;
+  text-shadow: 2px 2px black;
+  margin-left: 20px;
+  font-size: 1rem;
 }
 
-.input-wrapper {
+.main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  -moz-column-gap: 80px;
+       column-gap: 80px;
+}
+@media (max-width: 999px) {
+  .main {
+    grid-template-columns: 1fr;
+    width: 100%;
+  }
+}
+.main .calculator-input {
+  padding: 20px;
+}
+.main .calculator-input .input-wrapper {
   margin-top: 10px;
   display: flex;
+  justify-content: space-between;
   align-content: center;
   align-items: center;
   -moz-column-gap: 20px;
        column-gap: 20px;
 }
-.input-wrapper input {
+@media (max-width: 649px) {
+  .main .calculator-input .input-wrapper {
+    flex-direction: column;
+    row-gap: 20px;
+  }
+}
+.main .calculator-input .input-wrapper .input-info {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+}
+.main .calculator-input .input-wrapper input {
   background-color: rgb(235, 225, 225);
   border: none;
   padding: 5px 10px;
   border-radius: 10px;
+  width: 150px;
 }
-
-.info-text {
+@media (max-width: 649px) {
+  .main .calculator-input .input-wrapper input {
+    width: 50%;
+  }
+}
+.main .calculator-input .input-wrapper .info-wrapper {
+  width: 25px;
+  height: 25px;
+  position: relative;
+  display: inline-block;
+}
+.main .calculator-input .input-wrapper .info-wrapper .info-text {
   background-color: #02c4c4;
   color: white;
   padding: 8px 10px;
@@ -35,53 +106,62 @@
   left: 40px;
   width: 200px;
 }
-
-.info-wrapper {
+.main .calculator-input .input-wrapper .info-wrapper svg {
   width: 25px;
   height: 25px;
-  position: relative;
-  display: inline-block;
+  fill: #02c4c4;
 }
-.info-wrapper svg {
-  width: 25px;
-  height: 25px;
+.main .calculator-input .input-wrapper .info-wrapper svg:hover {
+  fill: blue;
 }
-.info-wrapper:hover {
+.main .calculator-input .input-wrapper .info-wrapper:hover {
   cursor: pointer;
 }
-.info-wrapper:hover .info-text {
+.main .calculator-input .input-wrapper .info-wrapper:hover .info-text {
   visibility: visible;
   z-index: 1;
 }
-
-.calculate-click {
-  margin-top: 20px;
+.main .calculator-input .button-wrap {
+  display: flex;
+  justify-content: center;
+}
+.main .calculator-input .button-wrap .calculate-click {
+  margin-top: 50px;
   background-color: #02c4c4;
   border: none;
   padding: 10px 15px;
   border-radius: 20px;
   font-family: "Mulish", sans-serif;
   color: whitesmoke;
+  font-size: 1.2rem;
+  cursor: pointer;
 }
-.calculate-click:hover {
+.main .calculator-input .button-wrap .calculate-click:hover {
   color: white;
   background-color: blue;
 }
-.calculate-click:active {
+.main .calculator-input .button-wrap .calculate-click:active {
   opacity: 0.8;
 }
-
-.more-info {
+.main .calculator-output {
+  padding: 20px;
+}
+.main .calculator-explained {
+  margin-top: 100px;
+  padding: 20px;
+  margin-bottom: 100px;
+}
+.main .calculator-explained .more-info {
   display: block;
   margin-top: 10px;
 }
-.more-info .links {
+.main .calculator-explained .more-info .links {
   text-decoration: none;
   color: #02c4c4;
 }
-.more-info .links:hover {
+.main .calculator-explained .more-info .links:hover {
   color: blue;
 }
-.more-info .links:active {
+.main .calculator-explained .more-info .links:active {
   opacity: 0.8;
 }/*# sourceMappingURL=style.css.map */
