--- a/style.scss
+++ b/style.scss
@@ -38,7 +38,7 @@ body {
     margin-right: auto;
     max-width: 1450px;
     width: 100%;
-    
+
 
 
 }
@@ -48,9 +48,10 @@ body {
     margin-top: 0px;
 
     font-family: 'Mulish', sans-serif;
+
     .img-wrapper {
 
-        background-image: linear-gradient(0deg, rgba(248, 247, 247, 0) 65%, rgba(1,0,0,0.8) 100%), url('happyhouse.jpg');
+        background-image: linear-gradient(0deg, rgba(248, 247, 247, 0) 65%, rgba(1, 0, 0, 0.8) 100%), url('happyhouse.jpg');
         padding-bottom: 150px;
         background-position: 70%;
         background-size: 100%;
@@ -62,8 +63,11 @@ body {
             text-shadow: 2px 2px black;
             margin-left: 20px;
             margin-bottom: 7px;
+            margin-top: 0px;
+            padding-top: 5px;
 
         }
+
         p {
             margin-top: 0px;
             color: white;
@@ -80,14 +84,14 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 80px;
-    
+
 
     @include xl {
         grid-template-columns: 1fr;
         width: 100%;
     }
-        
-    
+
+
 
     .calculator-input {
 
@@ -202,21 +206,21 @@ body {
                 color: whitesmoke;
                 font-size: 1.2rem;
                 cursor: pointer;
-            
+
                 &:hover {
                     color: white;
                     background-color: blue;
                 }
-            
+
                 &:active {
-            
+
                     opacity: .8;
                 }
-            
+
             }
         }
 
-      
+
 
 
     }
@@ -257,9 +261,3 @@ body {
 
 
 }
-
-
-
-
-
-
