--- a/style.scss
+++ b/style.scss
@@ -56,6 +56,7 @@ body {
         background-position: 70%;
         background-size: 100%;
         background-repeat: no-repeat;
+        background-size: cover;
 
 
         h1 {
@@ -64,7 +65,7 @@ body {
             margin-left: 20px;
             margin-bottom: 7px;
             margin-top: 0px;
-            padding-top: 5px;
+            padding-top: 10px;
 
         }
 
