--- a/style.scss
+++ b/style.scss
@@ -283,3 +283,11 @@ body {
 
 
 }
+
+.footer {
+
+    margin-bottom: 0px;
+    padding: 20px;
+    background-color: #ecf1f165;
+    font-family: 'Mulish', sans-serif;
+}
