--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   font-family: "Mulish", sans-serif;
 }
 
-.main {
+.main, .calculator-explained {
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
@@ -190,6 +190,12 @@ body {
 .footer {
   margin-bottom: 0px;
   padding: 20px;
+  padding-bottom: 50px;
   background-color: rgba(236, 241, 241, 0.3960784314);
   font-family: "Mulish", sans-serif;
+}
+@media (max-width: 999px) {
+  .footer {
+    width: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
