--- a/style.scss
+++ b/style.scss
@@ -291,7 +291,7 @@ body {
         width: 100%;
     }
 
-
+    margin-top: 50px;
     margin-bottom: 0px;
     padding: 20px;
     padding-bottom: 50px;
