--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
   font-family: "Mulish", sans-serif;
 }
 
-.main, .calculator-explained {
+.main,
+.calculator-explained {
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
@@ -20,7 +21,7 @@ body {
   font-family: "Mulish", sans-serif;
 }
 .header .img-wrapper {
-  background-image: linear-gradient(0deg, rgba(248, 247, 247, 0) 65%, rgba(1, 0, 0, 0.8) 100%), url("happyhouse.jpg");
+  background-image: linear-gradient(0deg, rgba(255, 255, 255, 0) 65%, rgba(1, 0, 0, 0.8) 100%), url("happyhouse.jpg");
   padding-bottom: 150px;
   background-position: 70%;
   background-size: 100%;
@@ -40,7 +41,7 @@ body {
   color: white;
   text-shadow: 2px 2px black;
   margin-left: 20px;
-  font-size: 1rem;
+  font-size: 1.3rem;
 }
 
 .main {
@@ -48,6 +49,7 @@ body {
   grid-template-columns: 1fr 1fr;
   -moz-column-gap: 80px;
        column-gap: 80px;
+  font-size: 1.2rem;
 }
 @media (max-width: 999px) {
   .main {
@@ -97,6 +99,8 @@ body {
   padding: 5px 10px;
   border-radius: 10px;
   width: 150px;
+  font-size: 1.1rem;
+  text-align: center;
 }
 @media (max-width: 649px) {
   .main .calculator-input .input-wrapper input {
@@ -169,6 +173,7 @@ body {
 }
 
 .footer {
+  font-family: "Mulish", sans-serif;
   margin-top: 50px;
   margin-bottom: 0px;
   padding: 20px;
@@ -186,17 +191,71 @@ body {
   padding: 20px;
   margin-bottom: 100px;
 }
-.footer .calculator-explained .more-info {
+.footer .calculator-explained .explain, .footer .calculator-explained .explain.explain-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto 1fr;
+  -moz-column-gap: 50px;
+       column-gap: 50px;
+  margin-top: 100px;
+}
+@media (max-width: 649px) {
+  .footer .calculator-explained .explain, .footer .calculator-explained .explain.explain-2 {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto 1fr;
+  }
+}
+.footer .calculator-explained .explain h3, .footer .calculator-explained .explain .LTI, .footer .calculator-explained .explain.explain-2 h3, .footer .calculator-explained .explain.explain-2 .LTI {
+  font-size: 1.25rem;
+}
+.footer .calculator-explained .explain .loan-cat, .footer .calculator-explained .explain .loan-cat.loan-cat-2, .footer .calculator-explained .explain.explain-2 .loan-cat, .footer .calculator-explained .explain.explain-2 .loan-cat.loan-cat-2 {
+  grid-row: 2/3;
+  grid-column: 2/3;
+  justify-self: end;
+  width: 100%;
+}
+@media (max-width: 649px) {
+  .footer .calculator-explained .explain .loan-cat, .footer .calculator-explained .explain .loan-cat.loan-cat-2, .footer .calculator-explained .explain.explain-2 .loan-cat, .footer .calculator-explained .explain.explain-2 .loan-cat.loan-cat-2 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    justify-self: start;
+    width: 100%;
+  }
+}
+.footer .calculator-explained .explain .loan-cat a img, .footer .calculator-explained .explain .loan-cat.loan-cat-2 a img, .footer .calculator-explained .explain.explain-2 .loan-cat a img, .footer .calculator-explained .explain.explain-2 .loan-cat.loan-cat-2 a img {
+  margin-top: 30px;
+  width: 100%;
+}
+.footer .calculator-explained .explain .loan-cat cite, .footer .calculator-explained .explain .loan-cat.loan-cat-2 cite, .footer .calculator-explained .explain.explain-2 .loan-cat cite, .footer .calculator-explained .explain.explain-2 .loan-cat.loan-cat-2 cite {
+  margin-left: 35px;
+  font-size: 0.7em;
+}
+.footer .calculator-explained .explain .explain-text, .footer .calculator-explained .explain .explain-text.explain-text-2, .footer .calculator-explained .explain.explain-2 .explain-text, .footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 {
+  grid-row: 2/3;
+}
+.footer .calculator-explained .explain .explain-text .more-info, .footer .calculator-explained .explain .explain-text.explain-text-2 .more-info, .footer .calculator-explained .explain.explain-2 .explain-text .more-info, .footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 .more-info {
   display: block;
   margin-top: 10px;
 }
-.footer .calculator-explained .more-info .links {
+.footer .calculator-explained .explain .explain-text .more-info .links, .footer .calculator-explained .explain .explain-text.explain-text-2 .more-info .links, .footer .calculator-explained .explain.explain-2 .explain-text .more-info .links, .footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 .more-info .links {
   text-decoration: none;
   color: #02c4c4;
 }
-.footer .calculator-explained .more-info .links:hover {
+.footer .calculator-explained .explain .explain-text .more-info .links:hover, .footer .calculator-explained .explain .explain-text.explain-text-2 .more-info .links:hover, .footer .calculator-explained .explain.explain-2 .explain-text .more-info .links:hover, .footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 .more-info .links:hover {
   color: blue;
 }
-.footer .calculator-explained .more-info .links:active {
+.footer .calculator-explained .explain .explain-text .more-info .links:active, .footer .calculator-explained .explain .explain-text.explain-text-2 .more-info .links:active, .footer .calculator-explained .explain.explain-2 .explain-text .more-info .links:active, .footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 .more-info .links:active {
   opacity: 0.8;
+}
+.footer .calculator-explained .explain .explain-text.explain-text-2, .footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 {
+  grid-column: 2/3;
+}
+@media (max-width: 649px) {
+  .footer .calculator-explained .explain .explain-text.explain-text-2, .footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 {
+    grid-column: 1/2;
+  }
+}
+.footer .calculator-explained .explain .loan-cat.loan-cat-2, .footer .calculator-explained .explain.explain-2 .loan-cat.loan-cat-2 {
+  grid-column: 1/2;
+  justify-self: start;
 }/*# sourceMappingURL=style.css.map */
