--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,8 @@ body {
     font-family: 'Mulish', sans-serif;
 }
 
-.main, .calculator-explained {
+.main,
+.calculator-explained {
 
     margin-top: 50px;
     margin-left: auto;
@@ -52,7 +53,7 @@ body {
 
     .img-wrapper {
 
-        background-image: linear-gradient(0deg, rgba(248, 247, 247, 0) 65%, rgba(1, 0, 0, 0.8) 100%), url('happyhouse.jpg');
+        background-image: linear-gradient(0deg, rgba(255, 255, 255, 0) 65%, rgba(1, 0, 0, 0.8) 100%), url('happyhouse.jpg');
         padding-bottom: 150px;
         background-position: 70%;
         background-size: 100%;
@@ -75,7 +76,8 @@ body {
             color: white;
             text-shadow: 2px 2px black;
             margin-left: 20px;
-            font-size: 1rem;
+            font-size: 1.3rem;
+
         }
     }
 }
@@ -86,6 +88,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 80px;
+    font-size: 1.2rem;
 
 
     @include xl {
@@ -102,6 +105,7 @@ body {
     .calculator-input {
 
         padding: 20px;
+       
 
         .input-wrapper {
 
@@ -141,6 +145,8 @@ body {
                 padding: 5px 10px;
                 border-radius: 10px;
                 width: 150px;
+                font-size: 1.10rem;
+                text-align: center;
 
                 @include sm {
                     width: 50%;
@@ -173,10 +179,10 @@ body {
                     @include sm() {
                         right: 40px;
                         left: unset;
-                     }
- 
+                    }
 
-                 
+
+
 
                 }
 
@@ -200,7 +206,7 @@ body {
 
                         visibility: visible;
                         z-index: 1;
-     
+
                     }
 
                 }
@@ -251,11 +257,13 @@ body {
         padding: 20px;
     }
 
-   
+
 
 }
 
 .footer {
+
+    font-family: 'Mulish', sans-serif;
 
     @include xl {
 
@@ -267,33 +275,126 @@ body {
     padding: 20px;
     padding-bottom: 50px;
     background-color: #ecf1f165;
-    font-family: 'Mulish', sans-serif;
+    font-family: 'Mulish',
+    sans-serif;
 
     .calculator-explained {
         margin-top: 100px;
         padding: 20px;
         margin-bottom: 100px;
 
+        .explain, .explain.explain-2 {
 
-        .more-info {
-            display: block;
-            margin-top: 10px;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows:auto 1fr;
+            column-gap: 50px;
+            margin-top: 100px;
 
-            .links {
-                
-                text-decoration: none;
+            @include sm {
 
-                color: #02c4c4;
+                grid-template-columns: 1fr;
+                grid-template-rows:auto auto 1fr;
+            }
 
-                &:hover {
-                    color: blue;
+            h3, .LTI {
+                // grid-row: 1 / 2;
+                font-size: 1.25rem;
+            }
+
+            .loan-cat, .loan-cat.loan-cat-2 {
+                grid-row: 2 / 3;
+                grid-column: 2 / 3;
+                justify-self: end;
+
+                width: 100%;
+
+                @include sm {
+
+                    grid-column: 1 / 2;
+                    grid-row: 3 / 4;
+                    justify-self: start;
+                    width: 100%;
                 }
 
-                &:active {
+                a {
+                    img {
+                        margin-top: 30px;
+                        width: 100%;
+                    }
+                }
 
-                    opacity: .8;
+                cite {
+                    margin-left: 35px;
+                    font-size: 0.7em;
+                }
+
+            }
+
+            .explain-text, .explain-text.explain-text-2  {
+                grid-row: 2 / 3;
+
+
+                .more-info {
+                    display: block;
+                    margin-top: 10px;
+
+                
+
+                    .links {
+
+                        text-decoration: none;
+
+                        color: #02c4c4;
+
+                        &:hover {
+                            color: blue;
+                        }
+
+                        &:active {
+
+                            opacity: .8;
+                        }
+                    }
+
+
+                }
+
+            }
+
+            .explain-text.explain-text-2 {
+                grid-column: 2 / 3;
+
+                @include sm {
+
+                    grid-column: 1 / 2;
+                  
                 }
             }
+
+            .loan-cat.loan-cat-2 {
+
+                grid-column: 1 / 2;
+                justify-self: start;
+                
+                
+
+            }
+
+            // .LTI {
+              
+            //     grid-column: 2 / 3;
+
+            //     @include sm {
+
+            //         grid-column: 1 / 2;
+                  
+            //     }
+
+             
+            // }
+
+
 
 
 
