--- a/style.css
+++ b/style.css
@@ -21,27 +21,62 @@ body {
   font-family: "Mulish", sans-serif;
 }
 .header .img-wrapper {
-  background-image: linear-gradient(0deg, rgba(255, 255, 255, 0) 65%, rgba(1, 0, 0, 0.8) 100%), url("happyhouse.jpg");
-  padding-bottom: 150px;
+  background-image: linear-gradient(0deg, rgba(255, 255, 255, 0) 20%, rgba(1, 0, 0, 0.8) 80%), url(happyhouse.jpg);
   background-position: 70%;
   background-size: 100%;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 80vh;
+  position: relative;
 }
-.header .img-wrapper h1 {
+.header .img-wrapper .header-text {
+  position: absolute;
+  left: 10%;
+  top: 20%;
+}
+.header .img-wrapper .header-text h1 {
   color: white;
   text-shadow: 2px 2px black;
-  margin-left: 20px;
-  margin-bottom: 7px;
-  padding-top: 50px;
-  margin-top: 0px;
+  font-size: 4em;
+  margin-bottom: 5px;
 }
-.header .img-wrapper p {
+@media (max-width: 999px) {
+  .header .img-wrapper .header-text h1 {
+    font-size: 3em;
+  }
+}
+@media (max-width: 768px) {
+  .header .img-wrapper .header-text h1 {
+    font-size: 2.5em;
+  }
+}
+@media (max-width: 649px) {
+  .header .img-wrapper .header-text h1 {
+    font-size: 2em;
+  }
+}
+.header .img-wrapper .header-text p {
   margin-top: 0px;
   color: white;
   text-shadow: 2px 2px black;
-  margin-left: 20px;
-  font-size: 1.3rem;
+  margin-left: 10px;
+  font-size: 1.5rem;
+}
+@media (max-width: 999px) {
+  .header .img-wrapper .header-text p {
+    font-size: 1.3em;
+  }
+}
+@media (max-width: 768px) {
+  .header .img-wrapper .header-text p {
+    font-size: 1.2em;
+  }
+}
+@media (max-width: 649px) {
+  .header .img-wrapper .header-text p {
+    font-size: 1em;
+    margin-left: 5px;
+  }
 }
 
 .main {
@@ -50,6 +85,7 @@ body {
   -moz-column-gap: 80px;
        column-gap: 80px;
   font-size: 1.2rem;
+  padding: 20px;
 }
 @media (max-width: 999px) {
   .main {
@@ -187,78 +223,119 @@ body {
   }
 }
 .footer .calculator-explained {
-  margin-top: 100px;
+  margin-top: 0px;
   padding: 20px;
   margin-bottom: 100px;
 }
-.footer .calculator-explained .explain, .footer .calculator-explained .explain.explain-2 {
+.footer .calculator-explained h2 {
+  font-size: 1.75rem;
+}
+.footer .calculator-explained .explain,
+.footer .calculator-explained .explain.explain-2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto 1fr;
   -moz-column-gap: 50px;
        column-gap: 50px;
-  margin-top: 100px;
+  margin-top: 50px;
 }
-@media (max-width: 649px) {
-  .footer .calculator-explained .explain, .footer .calculator-explained .explain.explain-2 {
+@media (max-width: 768px) {
+  .footer .calculator-explained .explain,
+  .footer .calculator-explained .explain.explain-2 {
     grid-template-columns: 1fr;
     grid-template-rows: auto auto 1fr;
   }
 }
-.footer .calculator-explained .explain h3, .footer .calculator-explained .explain .LTI, .footer .calculator-explained .explain.explain-2 h3, .footer .calculator-explained .explain.explain-2 .LTI {
-  font-size: 1.25rem;
+.footer .calculator-explained .explain h3,
+.footer .calculator-explained .explain .LTI,
+.footer .calculator-explained .explain.explain-2 h3,
+.footer .calculator-explained .explain.explain-2 .LTI {
+  font-size: 1.3rem;
 }
-.footer .calculator-explained .explain .loan-cat, .footer .calculator-explained .explain .loan-cat.loan-cat-2, .footer .calculator-explained .explain.explain-2 .loan-cat, .footer .calculator-explained .explain.explain-2 .loan-cat.loan-cat-2 {
+.footer .calculator-explained .explain .loan-cat,
+.footer .calculator-explained .explain .loan-cat.loan-cat-2,
+.footer .calculator-explained .explain.explain-2 .loan-cat,
+.footer .calculator-explained .explain.explain-2 .loan-cat.loan-cat-2 {
   grid-row: 2/3;
   grid-column: 2/3;
   justify-self: end;
   width: 100%;
+  height: 100%;
 }
-@media (max-width: 649px) {
-  .footer .calculator-explained .explain .loan-cat, .footer .calculator-explained .explain .loan-cat.loan-cat-2, .footer .calculator-explained .explain.explain-2 .loan-cat, .footer .calculator-explained .explain.explain-2 .loan-cat.loan-cat-2 {
+@media (max-width: 768px) {
+  .footer .calculator-explained .explain .loan-cat,
+  .footer .calculator-explained .explain .loan-cat.loan-cat-2,
+  .footer .calculator-explained .explain.explain-2 .loan-cat,
+  .footer .calculator-explained .explain.explain-2 .loan-cat.loan-cat-2 {
     grid-column: 1/2;
     grid-row: 3/4;
     justify-self: start;
     width: 100%;
   }
 }
-.footer .calculator-explained .explain .loan-cat a img, .footer .calculator-explained .explain .loan-cat.loan-cat-2 a img, .footer .calculator-explained .explain.explain-2 .loan-cat a img, .footer .calculator-explained .explain.explain-2 .loan-cat.loan-cat-2 a img {
+.footer .calculator-explained .explain .loan-cat img,
+.footer .calculator-explained .explain .loan-cat.loan-cat-2 img,
+.footer .calculator-explained .explain.explain-2 .loan-cat img,
+.footer .calculator-explained .explain.explain-2 .loan-cat.loan-cat-2 img {
   margin-top: 30px;
   width: 100%;
 }
-.footer .calculator-explained .explain .loan-cat cite, .footer .calculator-explained .explain .loan-cat.loan-cat-2 cite, .footer .calculator-explained .explain.explain-2 .loan-cat cite, .footer .calculator-explained .explain.explain-2 .loan-cat.loan-cat-2 cite {
-  margin-left: 35px;
+.footer .calculator-explained .explain .loan-cat cite,
+.footer .calculator-explained .explain .loan-cat.loan-cat-2 cite,
+.footer .calculator-explained .explain.explain-2 .loan-cat cite,
+.footer .calculator-explained .explain.explain-2 .loan-cat.loan-cat-2 cite {
   font-size: 0.7em;
 }
-.footer .calculator-explained .explain .explain-text, .footer .calculator-explained .explain .explain-text.explain-text-2, .footer .calculator-explained .explain.explain-2 .explain-text, .footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 {
+.footer .calculator-explained .explain .explain-text,
+.footer .calculator-explained .explain .explain-text.explain-text-2,
+.footer .calculator-explained .explain.explain-2 .explain-text,
+.footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 {
   grid-row: 2/3;
 }
-.footer .calculator-explained .explain .explain-text .more-info, .footer .calculator-explained .explain .explain-text.explain-text-2 .more-info, .footer .calculator-explained .explain.explain-2 .explain-text .more-info, .footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 .more-info {
+.footer .calculator-explained .explain .explain-text p,
+.footer .calculator-explained .explain .explain-text.explain-text-2 p,
+.footer .calculator-explained .explain.explain-2 .explain-text p,
+.footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 p {
+  font-size: 1.1rem;
+}
+.footer .calculator-explained .explain .explain-text .more-info,
+.footer .calculator-explained .explain .explain-text.explain-text-2 .more-info,
+.footer .calculator-explained .explain.explain-2 .explain-text .more-info,
+.footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 .more-info {
   display: block;
   margin-top: 10px;
 }
-.footer .calculator-explained .explain .explain-text .more-info .links, .footer .calculator-explained .explain .explain-text.explain-text-2 .more-info .links, .footer .calculator-explained .explain.explain-2 .explain-text .more-info .links, .footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 .more-info .links {
+.footer .calculator-explained .explain .explain-text .more-info .links,
+.footer .calculator-explained .explain .explain-text.explain-text-2 .more-info .links,
+.footer .calculator-explained .explain.explain-2 .explain-text .more-info .links,
+.footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 .more-info .links {
   text-decoration: none;
   color: #02c4c4;
 }
-.footer .calculator-explained .explain .explain-text .more-info .links:hover, .footer .calculator-explained .explain .explain-text.explain-text-2 .more-info .links:hover, .footer .calculator-explained .explain.explain-2 .explain-text .more-info .links:hover, .footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 .more-info .links:hover {
+.footer .calculator-explained .explain .explain-text .more-info .links:hover,
+.footer .calculator-explained .explain .explain-text.explain-text-2 .more-info .links:hover,
+.footer .calculator-explained .explain.explain-2 .explain-text .more-info .links:hover,
+.footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 .more-info .links:hover {
   color: blue;
 }
-.footer .calculator-explained .explain .explain-text .more-info .links:active, .footer .calculator-explained .explain .explain-text.explain-text-2 .more-info .links:active, .footer .calculator-explained .explain.explain-2 .explain-text .more-info .links:active, .footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 .more-info .links:active {
+.footer .calculator-explained .explain .explain-text .more-info .links:active,
+.footer .calculator-explained .explain .explain-text.explain-text-2 .more-info .links:active,
+.footer .calculator-explained .explain.explain-2 .explain-text .more-info .links:active,
+.footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 .more-info .links:active {
   opacity: 0.8;
 }
-.footer .calculator-explained .explain .explain-text.explain-text-2, .footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 {
+.footer .calculator-explained .explain .explain-text.explain-text-2,
+.footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 {
   grid-column: 2/3;
 }
-.explain-text,.explain-text.explain-text-2 {
-font-size: 1.5rem;
-}
-@media (max-width: 649px) {
-  .footer .calculator-explained .explain .explain-text.explain-text-2, .footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 {
+@media (max-width: 768px) {
+  .footer .calculator-explained .explain .explain-text.explain-text-2,
+  .footer .calculator-explained .explain.explain-2 .explain-text.explain-text-2 {
     grid-column: 1/2;
   }
 }
-.footer .calculator-explained .explain .loan-cat.loan-cat-2, .footer .calculator-explained .explain.explain-2 .loan-cat.loan-cat-2 {
+.footer .calculator-explained .explain .loan-cat.loan-cat-2,
+.footer .calculator-explained .explain.explain-2 .loan-cat.loan-cat-2 {
   grid-column: 1/2;
   justify-self: start;
 }/*# sourceMappingURL=style.css.map */
