--- a/style.scss
+++ b/style.scss
@@ -53,33 +53,83 @@ body {
 
     .img-wrapper {
 
-        background-image: linear-gradient(0deg, rgba(255, 255, 255, 0) 65%, rgba(1, 0, 0, 0.8) 100%), url('happyhouse.jpg');
-        padding-bottom: 150px;
+        background-image: linear-gradient(0deg, rgba(255, 255, 255, 0) 20%, rgba(1, 0, 0, 0.8) 80%), url(happyhouse.jpg);
+
         background-position: 70%;
         background-size: 100%;
         background-repeat: no-repeat;
         background-size: cover;
+        height: 80vh;
+        position: relative;
 
 
-        h1 {
-            color: white;
-            text-shadow: 2px 2px black;
-            margin-left: 20px;
-            margin-bottom: 7px;
-            padding-top: 50px;
-            margin-top: 0px;
+        .header-text {
+
+            position: absolute;
+            left: 10%;
+            top: 20%;
+
+            h1 {
+                color: white;
+                text-shadow: 2px 2px black;
+                font-size: 4em;
+                margin-bottom: 5px;
+
+                @include xl {
+
+                    font-size: 3em;
+                }
+
+                @include md {
+
+                    font-size: 2.5em;
+                }
+
+
+                @include sm {
+                    font-size: 2em;
+                }
+
+
+            }
+
+
+
+            p {
+                margin-top: 0px;
+                color: white;
+                text-shadow: 2px 2px black;
+                margin-left: 10px;
+                font-size: 1.5rem;
+
+                @include xl {
+
+                    font-size: 1.3em;
+                }
+
+                @include md {
+
+                    font-size: 1.2em;
+                }
+
+
+                @include sm {
+                    font-size: 1em;
+                    margin-left: 5px;
+                }
+
+
+
+            }
+
+
 
         }
 
-        p {
-            margin-top: 0px;
-            color: white;
-            text-shadow: 2px 2px black;
-            margin-left: 20px;
-            font-size: 1.3rem;
 
-        }
+
     }
+
 }
 
 .main {
@@ -89,6 +139,7 @@ body {
     grid-template-columns: 1fr 1fr;
     column-gap: 80px;
     font-size: 1.2rem;
+    padding: 20px;
 
 
     @include xl {
@@ -105,7 +156,7 @@ body {
     .calculator-input {
 
         padding: 20px;
-       
+
 
         .input-wrapper {
 
@@ -279,37 +330,47 @@ body {
     sans-serif;
 
     .calculator-explained {
-        margin-top: 100px;
+        margin-top: 0px;
         padding: 20px;
         margin-bottom: 100px;
 
-        .explain, .explain.explain-2 {
+        h2 {
+            font-size: 1.75rem;
+        }
+
+        .explain,
+        .explain.explain-2 {
 
             display: grid;
             grid-template-columns: 1fr 1fr;
-            grid-template-rows:auto 1fr;
+            grid-template-rows: auto 1fr;
             column-gap: 50px;
-            margin-top: 100px;
+            margin-top: 50px;
 
-            @include sm {
+            @include md {
 
                 grid-template-columns: 1fr;
-                grid-template-rows:auto auto 1fr;
+                grid-template-rows: auto auto 1fr;
             }
 
-            h3, .LTI {
-                // grid-row: 1 / 2;
-                font-size: 1.25rem;
+
+            h3,
+            .LTI {
+
+                font-size: 1.3rem;
             }
 
-            .loan-cat, .loan-cat.loan-cat-2 {
+            .loan-cat,
+            .loan-cat.loan-cat-2 {
                 grid-row: 2 / 3;
                 grid-column: 2 / 3;
                 justify-self: end;
 
                 width: 100%;
+            
+           
 
-                @include sm {
+                @include md {
 
                     grid-column: 1 / 2;
                     grid-row: 3 / 4;
@@ -317,29 +378,38 @@ body {
                     width: 100%;
                 }
 
-                a {
-                    img {
-                        margin-top: 30px;
-                        width: 100%;
-                    }
+
+
+                height: 100%;
+                
+
+                img {
+                    margin-top: 30px;
+                    width: 100%;
+                   
                 }
 
                 cite {
-                    margin-left: 35px;
+                    
                     font-size: 0.7em;
+                  
                 }
 
             }
 
-            .explain-text, .explain-text.explain-text-2  {
+            .explain-text,
+            .explain-text.explain-text-2 {
                 grid-row: 2 / 3;
 
+                p {
+                    font-size: 1.1rem;
+                }
 
                 .more-info {
                     display: block;
                     margin-top: 10px;
 
-                
+
 
                     .links {
 
@@ -365,10 +435,10 @@ body {
             .explain-text.explain-text-2 {
                 grid-column: 2 / 3;
 
-                @include sm {
+                @include md {
 
                     grid-column: 1 / 2;
-                  
+
                 }
             }
 
@@ -376,26 +446,10 @@ body {
 
                 grid-column: 1 / 2;
                 justify-self: start;
-                
-                
+
+
 
             }
-
-            // .LTI {
-              
-            //     grid-column: 2 / 3;
-
-            //     @include sm {
-
-            //         grid-column: 1 / 2;
-                  
-            //     }
-
-             
-            // }
-
-
-
 
 
         }
