--- a/style.css
+++ b/style.css
@@ -16,6 +16,33 @@ body {
   width: 100%;
 }
 
+.button-wrap {
+  display: flex;
+  justify-content: center;
+}
+.button-wrap .calculate-click {
+  margin-top: 50px;
+  background-color: #02c4c4;
+  border: none;
+  padding: 15px 20px;
+  border-radius: 20px;
+  font-family: "Mulish", sans-serif;
+  color: whitesmoke;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+.button-wrap .calculate-click a {
+  text-decoration: none;
+  color: white;
+}
+.button-wrap .calculate-click:hover {
+  color: white;
+  background-color: blue;
+}
+.button-wrap .calculate-click:active {
+  opacity: 0.8;
+}
+
 .header {
   margin-top: 0px;
   font-family: "Mulish", sans-serif;
@@ -98,6 +125,9 @@ body {
 }
 .main .calculator-input {
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .main .calculator-input .input-wrapper {
   margin-top: 10px;
@@ -182,30 +212,19 @@ body {
   visibility: visible;
   z-index: 1;
 }
-.main .calculator-input .button-wrap {
-  display: flex;
-  justify-content: center;
-}
-.main .calculator-input .button-wrap .calculate-click {
-  margin-top: 50px;
-  background-color: #02c4c4;
-  border: none;
-  padding: 10px 15px;
-  border-radius: 20px;
-  font-family: "Mulish", sans-serif;
-  color: whitesmoke;
-  font-size: 1.2rem;
-  cursor: pointer;
-}
-.main .calculator-input .button-wrap .calculate-click:hover {
-  color: white;
-  background-color: blue;
-}
-.main .calculator-input .button-wrap .calculate-click:active {
-  opacity: 0.8;
-}
 .main .calculator-output {
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.main .calculator-output .output-list {
+  padding-left: 0px;
+}
+.main .calculator-output .output-list li {
+  list-style-type: none;
+  font-size: 1.2rem;
+  margin-top: 10px;
 }
 
 .footer {
