--- a/schedule.scss
+++ b/schedule.scss
@@ -1,41 +1,16 @@
 body {
-    margin: 0px;
-    font-family: 'Mulish', sans-serif;
-
-    .wrapper {
-
-        margin-left: 20px;
-        .schedule {
-
-            width: auto;
-            
+    padding: 20px;
     
-           
-    
-            thead {
-                tr {
-                    th {
-                        padding: 10px;
-                        background-color: #02c4c4;
-                        color: #ffecec;
-                        border-radius: 8px;
-                        
-                    }
-                }
-    
-            }
-    
-            tbody {
-    
-                tr {
-                    text-align: end;
-                  
-                }
-            }
-        }
+}
 
+.schedule-info {
 
-    }
+    text-align: center;
+    
+    
 
- 
+}
+
+table {
+    text-align: center;
 }
